Initialized a timetable for TaggerTests.